// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SFormValidation.vue accepts an icon prop 1`] = `
<div class="form-validation form-validation--error" name="fade">
  <sicon-stub icon="activity" iconcolor="red" iconsize=""></sicon-stub>
</div>
`;

exports[`SFormValidation.vue accepts text as a prop or slot 1`] = `
<div class="form-validation form-validation--error" name="fade">
  <sicon-stub icon="alert-circle" iconcolor="red" iconsize=""></sicon-stub> Some text
</div>
`;

exports[`SFormValidation.vue accepts text as a prop or slot 2`] = `
<div class="form-validation form-validation--error" name="fade">
  <sicon-stub icon="alert-circle" iconcolor="red" iconsize=""></sicon-stub> More text
</div>
`;

exports[`SFormValidation.vue renders correctly 1`] = `
<div class="form-validation form-validation--error" name="fade">
  <sicon-stub icon="alert-circle" iconcolor="red" iconsize=""></sicon-stub>
</div>
`;

exports[`SFormValidation.vue sets a visual state for  state 1`] = `
<div class="form-validation" name="fade">
  <!---->
</div>
`;

exports[`SFormValidation.vue sets a visual state for error state 1`] = `
<div class="form-validation form-validation--error" name="fade">
  <sicon-stub icon="alert-circle" iconcolor="red" iconsize=""></sicon-stub>
</div>
`;

exports[`SFormValidation.vue sets a visual state for success state 1`] = `
<div class="form-validation form-validation--success" name="fade">
  <sicon-stub icon="check-circle" iconcolor="green" iconsize=""></sicon-stub>
</div>
`;

exports[`SFormValidation.vue sets a visual state for warning state 1`] = `
<div class="form-validation form-validation--warning" name="fade">
  <sicon-stub icon="alert-triangle" iconcolor="gold" iconsize=""></sicon-stub>
</div>
`;
